Custom--app/main/default/objects/DFSS_SnapShot_Push__c/DFSS_SnapShot_Push__c.object-meta.xml
<CustomObject>
    <description>DreamFactory/SnapShot</description>
    <label>SnapShot Push</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SnapShot Pushes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>