Custom--app/main/default/objects/DFSS_SnapShot_Push__c/fields/Extra_Field__c.field-meta.xml
<CustomField>
    <fullName>Extra_Field__c</fullName>
    <label>Extra Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>