Custom--app/main/default/objects/DFSS_SnapShot_Push__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>