Custom--app/main/default/objects/DFSS_SnapShot_Push__c/fields/SnapShot__c.field-meta.xml
<CustomField>
    <fullName>SnapShot__c</fullName>
    <label>SnapShot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>