Custom--app/main/default/objects/DFSS_SnapShot_Push__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check For Errors Without Making Changes</fullName>
            </value>
            <value>
                <fullName>Roll Back All Changes If There Is An Error</fullName>
            </value>
            <value>
                <fullName>Change Everything Possible And Ignore Errors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>