Custom--app/main/default/objects/DFSS_SnapShot_Push__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>