Custom--app/main/default/objects/DFSS_SnapShot_Push__c/listViews/All_Pushes.listView-meta.xml
<ListView>
    <fullName>All_Pushes</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>SnapShot__c</columns>
    <columns>Source__c</columns>
    <columns>Success__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Pushes</label>
</ListView>