Custom--app/main/default/objects/DFSS_SnapShot_Push__c/listViews/All_Successful_Pushes.listView-meta.xml
<ListView>
    <fullName>All_Successful_Pushes</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>SnapShot__c</columns>
    <columns>Source__c</columns>
    <columns>Success__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Success__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Successful Pushes</label>
</ListView>