Custom--app/main/default/objects/DFSS_SnapShot_Push__c/listViews/Today_s_Unsuccessful_Changes.listView-meta.xml
<ListView>
    <fullName>Today_s_Unsuccessful_Changes</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>SnapShot__c</columns>
    <columns>Source__c</columns>
    <columns>Success__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Success__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Today's Unsuccessful Changes</label>
</ListView>